New styles, missing fixes on the display flex sign in page

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html {
   transition-property: background-color, border-color, color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+  box-sizing: border-box;
 }
 
 /* Evitar transiciones en elementos que no las necesitan */
